Replace all Amazon links with provided SiteStripe short links; UX assets in place

--- a/resources.html
+++ b/resources.html
@@ -40,8 +40,8 @@
                     <div class="resource-title">Buttaro: Primary Care</div>
                     <div class="resource-description">The gold standard for NP clinical practice. Comprehensive clinical decision-making guide that every NP student needs.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/0323711052/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/0323711052/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="buttaroLink" href="https://amzn.to/4mWwUjh" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('buttaroLink')">Copy link</button>
                     </div>
                     <div class="price">$80-120</div>
                     <div class="commission">Essential for clinical rotations</div>
@@ -51,8 +51,8 @@
                     <div class="resource-title">Pharmacology for Primary Care Provider</div>
                     <div class="resource-description">Master drug therapy with this comprehensive pharmacology guide. Perfect for clinical rotations and board prep.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/0323642476/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/0323642476/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="pharmLink" href="https://amzn.to/4pkZPPI" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('pharmLink')">Copy link</button>
                     </div>
                     <div class="price">$60-90</div>
                     <div class="commission">Must-have for pharmacology</div>
@@ -62,8 +62,8 @@
                     <div class="resource-title">Pathophysiology: Biologic Basis for Disease</div>
                     <div class="resource-description">Understand disease processes with this comprehensive pathophysiology textbook. Essential for advanced practice understanding.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/0323654393/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/0323654393/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="pathoLink" href="https://amzn.to/4plCkG7" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('pathoLink')">Copy link</button>
                     </div>
                     <div class="price">$70-100</div>
                     <div class="commission">Core textbook for NP school</div>
@@ -73,8 +73,8 @@
                     <div class="resource-title">Davis's Drug Guide for Nurses</div>
                     <div class="resource-description">Quick drug reference that's perfect for clinical rotations and practice. Updated with latest medications.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/1719642859/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/1719642859/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="davisLink" href="https://amzn.to/4pk7xcJ" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('davisLink')">Copy link</button>
                     </div>
                     <div class="price">$40-60</div>
                     <div class="commission">Handy clinical reference</div>
@@ -84,8 +84,8 @@
                     <div class="resource-title">Taber's Cyclopedic Medical Dictionary</div>
                     <div class="resource-description">Medical terminology reference that helps you understand complex medical terms throughout NP school.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/1719642859/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/1719642859/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="tabersLink" href="https://amzn.to/3JW9M65" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('tabersLink')">Copy link</button>
                     </div>
                     <div class="price">$30-50</div>
                     <div class="commission">Essential reference tool</div>
@@ -133,8 +133,8 @@
                     <div class="resource-title">Littmann Classic III Stethoscope</div>
                     <div class="resource-description">Professional grade stethoscope with clear sound and durable construction. This is an investment that will last years.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/B0015PXMFC/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/B0015PXMFC/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="littmannLink" href="https://amzn.to/4gqUPoQ" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('littmannLink')">Copy link</button>
                     </div>
                     <div class="price">$80-120</div>
                     <div class="commission">Professional quality</div>
@@ -144,8 +144,8 @@
                     <div class="resource-title">Professional Scrubs Set</div>
                     <div class="resource-description">Comfortable and functional scrubs. Look for brands like Cherokee, Grey's Anatomy, or Dickies with pockets and stretch fabric.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="scrubsLink" href="https://amzn.to/46gghbn" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('scrubsLink')">Copy link</button>
                     </div>
                     <div class="price">$30-50</div>
                     <div class="commission">Comfortable for long shifts</div>
@@ -155,8 +155,8 @@
                     <div class="resource-title">NP Clinical Bag</div>
                     <div class="resource-description">Organize your clinical essentials with multiple compartments and durable material. Must-have for clinical rotations.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="bagLink" href="https://amzn.to/46dFdQz" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('bagLink')">Copy link</button>
                     </div>
                     <div class="price">$25-40</div>
                     <div class="commission">Keeps you organized</div>
@@ -166,8 +166,8 @@
                     <div class="resource-title">NP Student Planner</div>
                     <div class="resource-description">Track clinicals and exams with features like clinical rotation schedule, exam dates, and assignment tracker.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="plannerLink" href="https://amzn.to/4paTQge" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('plannerLink')">Copy link</button>
                     </div>
                     <div class="price">$15-25</div>
                     <div class="commission">Stay organized and on track</div>
@@ -177,8 +177,8 @@
                     <div class="resource-title">Medical Reference Cards</div>
                     <div class="resource-description">Quick clinical reference cards perfect for clinical rotations and quick lookups during patient care.</div>
                     <div class="resource-actions">
-                        <a href="https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20" class="resource-link" target="_blank">Buy on Amazon</a>
-                        <button class="copy-btn" onclick="copyToClipboard('https://www.amazon.com/dp/B08N5KQZ9M/?tag=nursehusband8-20')">Copy link</button>
+                        <a id="cardsLink" href="https://amzn.to/3K0jswc" class="resource-link" target="_blank">Buy on Amazon</a>
+                        <button class="copy-btn" onclick="copyFromId('cardsLink')">Copy link</button>
                     </div>
                     <div class="price">$10-20</div>
                     <div class="commission">Quick reference during clinicals</div>
